tests/parse_print/random_perturb/set01/change-02/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/set01/change-02/change-02.essence line 1, column 18:
expecting dot
language version expected to be at least 1.0, but given: 1
    line 1, column 18
    language Essence 1X3
                  ^^^^^^^